Uploading and querying business cards - done!
